fix - Change styling at section statistics on mobile

--- a/src/sections/skills/style.css
+++ b/src/sections/skills/style.css
@@ -54,6 +54,10 @@
 }
 
 @media (max-width: 36rem) {
+  .skills {
+    padding-bottom: 8rem;
+  }
+  
   .skills__wrapper {
     gap: 6rem;
   }
