--- a/src/sections/testimonials/style.css
+++ b/src/sections/testimonials/style.css
@@ -1,3 +1,9 @@
 .testimonials {
   padding-bottom: 12rem;
 }
+
+@media only screen and (max-width: 37.5em) {
+  .testimonials {
+    padding-bottom: 8rem;
+  }
+}
